สร้างโดยใช้ Colaboratory

--- a/Preparing_data.ipynb
+++ b/Preparing_data.ipynb
@@ -31,14 +31,14 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://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@github.com/zolocapricorn/Senior_Project.git"
+        "!git clone https://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@github.com/zolocapricorn/Senior_Project.git"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_MkPXzGlRYO0",
-        "outputId": "66c27816-48d1-4324-950a-9ecfc4dd1d85"
+        "outputId": "2cb28c13-0094-4774-bd0c-a38186e06352"
       },
       "execution_count": 1,
       "outputs": [
@@ -47,12 +47,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Senior_Project'...\n",
-            "remote: Enumerating objects: 217, done.\u001b[K\n",
-            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Total 217 (delta 18), reused 29 (delta 16), pack-reused 184\u001b[K\n",
-            "Receiving objects: 100% (217/217), 87.19 MiB | 30.06 MiB/s, done.\n",
-            "Resolving deltas: 100% (92/92), done.\n"
+            "remote: Enumerating objects: 220, done.\u001b[K\n",
+            "remote: Counting objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Total 220 (delta 21), reused 29 (delta 16), pack-reused 184\u001b[K\n",
+            "Receiving objects: 100% (220/220), 87.20 MiB | 27.50 MiB/s, done.\n",
+            "Resolving deltas: 100% (95/95), done.\n"
           ]
         }
       ]
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AIBGFJgU9PEO",
-        "outputId": "98a4d844-6e6f-41ad-dbd8-f3ea22f36c65"
+        "outputId": "1c8c4bfc-a375-4bfd-b4d5-4886aa837af0"
       },
-      "execution_count": 128,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "quIqTrkk4S0x"
       },
-      "execution_count": 134,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -102,16 +102,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v6Rj9QaFEKIE",
-        "outputId": "45ccec53-2bd6-4be2-9f3b-dcbbfc355477"
+        "outputId": "47f92feb-8704-43bf-f49d-cef360b3d972"
       },
-      "execution_count": 135,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "origin\thttps://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@github.com/zolocapricorn/Senior_Project.git (fetch)\n",
-            "origin\thttps://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@github.com/zolocapricorn/Senior_Project.git (push)\n"
+            "origin\thttps://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@github.com/zolocapricorn/Senior_Project.git (fetch)\n",
+            "origin\thttps://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@github.com/zolocapricorn/Senior_Project.git (push)\n"
           ]
         }
       ]
@@ -467,9 +467,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5wcd2BA-Nxly",
-        "outputId": "a6c23963-b577-40b7-a352-926db82e2079"
+        "outputId": "36bc5231-749d-45cd-a1ea-1cda9242031e"
       },
-      "execution_count": 136,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zJwDhWOoaQ_l",
-        "outputId": "326dd0b6-cf98-44ad-b730-406614ea966f"
+        "outputId": "e85b3be8-6c09-4c93-8827-939359d651ad"
       },
-      "execution_count": 140,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,24 +512,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# !git add entertainment_media_dataset.pkl\n",
-        "# !git commit -m \"Update entertainment_media_dataset.pkl file.\"\n",
+        "!git add entertainment_media_dataset.pkl\n",
+        "!git commit -m \"Update entertainment_media_dataset.pkl file.\"\n",
         "!git push origin main"
       ],
       "metadata": {
         "id": "hrozlaveLwXu",
-        "outputId": "113e984e-dca8-4ec3-fada-e4c0f9cd3311",
+        "outputId": "c1c1518b-4f31-4be8-c5fe-adb52ba8ee42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 141,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: could not read Password for 'https://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@github.com': No such device or address\n"
+            "On branch main\n",
+            "Your branch is ahead of 'origin/main' by 1 commit.\n",
+            "  (use \"git push\" to publish your local commits)\n",
+            "\n",
+            "nothing to commit, working tree clean\n",
+            "Enumerating objects: 7, done.\n",
+            "Counting objects: 100% (7/7), done.\n",
+            "Delta compression using up to 2 threads\n",
+            "Compressing objects: 100% (4/4), done.\n",
+            "Writing objects: 100% (4/4), 1.09 MiB | 1.35 MiB/s, done.\n",
+            "Total 4 (delta 3), reused 0 (delta 0), pack-reused 0\n",
+            "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+            "To https://github.com/zolocapricorn/Senior_Project.git\n",
+            "   7d430df..0b7f29f  main -> main\n"
           ]
         }
       ]
@@ -540,10 +553,22 @@
         "!git config http.postBuffer 524288000"
       ],
       "metadata": {
-        "id": "0HiEnq8slsY9"
+        "id": "0HiEnq8slsY9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fbba6b50-1ccf-4bde-bf19-7523834eb192"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not in a git directory\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -751,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "id": "ZFKb9uVHm8av"
       },
@@ -811,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 11,
       "metadata": {
         "id": "MKV44zudnINq"
       },
@@ -1228,7 +1253,7 @@
       "metadata": {
         "id": "5mFaSSGILEa7"
       },
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -3896,7 +3921,7 @@
       "metadata": {
         "id": "4GHwx8cBnlGt"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -3922,7 +3947,7 @@
       "metadata": {
         "id": "b14LBE25BbZp"
       },
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -5736,7 +5761,7 @@
       "metadata": {
         "id": "aB3ThSdYfAq6"
       },
-      "execution_count": 129,
+      "execution_count": 19,
       "outputs": []
     },
     {
